Fixed Pre Tag for Wrap

--- a/resources/css/doc-style.css
+++ b/resources/css/doc-style.css
@@ -320,7 +320,6 @@ only screen and (min-device-pixel-ratio: 2) {
 kbd,
 blockquote,
 pre {
-  white-space: pre-wrap;
   display: block;
   margin-top: 0;
   margin-bottom: 20px;
